tests/tests/core/snapshots/main__core__raid_tests__raid_crypt.snap
---
source: tests/tests/core/raid_tests.rs
assertion_line: 426
expression: "Summary::summarize(&response)"
---

command_list: 
    UpdateGameView: 
        user: 
            side: Riftcaller
            player_info: 
            valid_rooms_to_visit: 
            mana: 995
            action_tracker: 2
            score: 0
            can_take_action: true
        opponent: 
            side: Covenant
            player_info: 
            valid_rooms_to_visit: 
            mana: 996
            action_tracker: 0
            score: 0
            can_take_action: false
        raid_active: true
        game_object_positions: 
            user_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: User }
            opponent_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: Opponent }
            user_character: 
                sorting_key: 2
                position: ObjectPositionRaid
            opponent_character: 
                sorting_key: 1
                position: ObjectPositionCharacterContainer { owner: Opponent }
            user_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: User }
            opponent_discard: 
                sorting_key: 0
                position: ObjectPositionRaid
    cards: 
        card_id: O0
        revealed_to_viewer: false
        is_face_up: false
        card_icons: 
        arena_frame: "<SpriteAddress>"
        owning_player: Opponent
        card_id: O44
        revealed_to_viewer: true
        is_face_up: true
        card_icons: 
            top_left_icon: "3"
            bottom_right_icon: "5"
        arena_frame: "<SpriteAddress>"
        owning_player: Opponent
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Minion End Raid"
            rules_text: "<RulesText>"
            targeting: 
            valid_rooms: 
            on_release_position: 
                sorting_key: 101
                position: ObjectPositionRoom { room_id: Unspecified, room_location: Front }
        card_id: C44
        revealed_to_viewer: true
        is_face_up: true
        card_icons: 
            top_left_icon: "3"
            bottom_right_icon: "3"
        arena_frame: "<SpriteAddress>"
        owning_player: User
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Weapon 3 Attack 12 Boost 3 Cost"
            rules_text: "<RulesText>"
            targeting: 
                can_play: false
            on_release_position: 
                sorting_key: 101
                position: ObjectPositionItem { item_location: Left }
    FireProjectile: 
        source_id: C44
        target_id: O44
        projectile: "<ProjectileAddress>"
        travel_duration: 300
        wait_duration: 300
    UpdateGameView: 
        user: 
            side: Riftcaller
            player_info: 
            valid_rooms_to_visit: 
            mana: 995
            action_tracker: 2
            score: 0
            can_take_action: true
        opponent: 
            side: Covenant
            player_info: 
            valid_rooms_to_visit: 
            mana: 996
            action_tracker: 0
            score: 0
            can_take_action: false
        raid_active: true
        controls: 
            node: 
                text: "End Raid"
        card_anchor_nodes: 
            card_id: O0
            node: 
                text: "Score!"
        anchors: 
            node_corner: TopLeft
            card_corner: BottomLeft
            node_corner: TopRight
            card_corner: BottomRight
        game_object_positions: 
            user_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: User }
            opponent_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: Opponent }
            user_character: 
                sorting_key: 1
                position: ObjectPositionCharacterContainer { owner: User }
            opponent_character: 
                sorting_key: 1
                position: ObjectPositionCharacterContainer { owner: Opponent }
            user_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: User }
            opponent_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: Opponent }
    cards: 
        card_id: O0
        revealed_to_viewer: true
        is_face_up: false
        card_icons: 
            top_left_icon: "3"
            bottom_right_icon: "10"
        arena_frame: "<SpriteAddress>"
        owning_player: Opponent
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Scheme 3_10"
            rules_text: "<RulesText>"
            targeting: 
            valid_rooms: 
            on_release_position: 
                sorting_key: 101
                position: ObjectPositionRoom { room_id: Unspecified, room_location: Back }
        card_id: O44
        revealed_to_viewer: true
        is_face_up: true
        card_icons: 
            top_left_icon: "3"
            bottom_right_icon: "5"
        arena_frame: "<SpriteAddress>"
        owning_player: Opponent
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Minion End Raid"
            rules_text: "<RulesText>"
            targeting: 
            valid_rooms: 
            on_release_position: 
                sorting_key: 101
                position: ObjectPositionRoom { room_id: Unspecified, room_location: Front }
        card_id: C44
        revealed_to_viewer: true
        is_face_up: true
        card_icons: 
            top_left_icon: "3"
            bottom_right_icon: "3"
        arena_frame: "<SpriteAddress>"
        owning_player: User
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Weapon 3 Attack 12 Boost 3 Cost"
            rules_text: "<RulesText>"
            targeting: 
                can_play: false
            on_release_position: 
                sorting_key: 101
                position: ObjectPositionItem { item_location: Left }
channel_response: 
    UpdateGameView: 
        user: 
            side: Covenant
            player_info: 
            valid_rooms_to_visit: 
            mana: 996
            action_tracker: 0
            score: 0
            can_take_action: false
        opponent: 
            side: Riftcaller
            player_info: 
            valid_rooms_to_visit: 
            mana: 995
            action_tracker: 2
            score: 0
            can_take_action: true
        raid_active: true
        game_object_positions: 
            user_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: User }
            opponent_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: Opponent }
            user_character: 
                sorting_key: 1
                position: ObjectPositionCharacterContainer { owner: User }
            opponent_character: 
                sorting_key: 2
                position: ObjectPositionRaid
            user_discard: 
                sorting_key: 0
                position: ObjectPositionRaid
            opponent_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: Opponent }
    cards: 
        card_id: O0
        revealed_to_viewer: false
        is_face_up: false
        card_icons: 
        arena_frame: "<SpriteAddress>"
        owning_player: User
        card_id: O44
        revealed_to_viewer: true
        is_face_up: true
        card_icons: 
            top_left_icon: "3"
            bottom_right_icon: "5"
        arena_frame: "<SpriteAddress>"
        owning_player: User
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Minion End Raid"
            rules_text: "<RulesText>"
            targeting: 
            valid_rooms: 
            on_release_position: 
                sorting_key: 101
                position: ObjectPositionRoom { room_id: Unspecified, room_location: Front }
        card_id: C44
        revealed_to_viewer: true
        is_face_up: true
        card_icons: 
            top_left_icon: "3"
            bottom_right_icon: "3"
        arena_frame: "<SpriteAddress>"
        owning_player: Opponent
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Weapon 3 Attack 12 Boost 3 Cost"
            rules_text: "<RulesText>"
            targeting: 
                can_play: false
            on_release_position: 
                sorting_key: 101
                position: ObjectPositionItem { item_location: Left }
    FireProjectile: 
        source_id: C44
        target_id: O44
        projectile: "<ProjectileAddress>"
        travel_duration: 300
        wait_duration: 300
    UpdateGameView: 
        user: 
            side: Covenant
            player_info: 
            valid_rooms_to_visit: 
            mana: 996
            action_tracker: 0
            score: 0
            can_take_action: false
        opponent: 
            side: Riftcaller
            player_info: 
            valid_rooms_to_visit: 
            mana: 995
            action_tracker: 2
            score: 0
            can_take_action: true
        raid_active: true
        game_object_positions: 
            user_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: User }
            opponent_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: Opponent }
            user_character: 
                sorting_key: 1
                position: ObjectPositionCharacterContainer { owner: User }
            opponent_character: 
                sorting_key: 1
                position: ObjectPositionCharacterContainer { owner: Opponent }
            user_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: User }
            opponent_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: Opponent }
    cards: 
        card_id: O0
        revealed_to_viewer: false
        is_face_up: false
        card_icons: 
        arena_frame: "<SpriteAddress>"
        owning_player: User
        card_id: O44
        revealed_to_viewer: true
        is_face_up: true
        card_icons: 
            top_left_icon: "3"
            bottom_right_icon: "5"
        arena_frame: "<SpriteAddress>"
        owning_player: User
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Minion End Raid"
            rules_text: "<RulesText>"
            targeting: 
            valid_rooms: 
            on_release_position: 
                sorting_key: 101
                position: ObjectPositionRoom { room_id: Unspecified, room_location: Front }
        card_id: C44
        revealed_to_viewer: true
        is_face_up: true
        card_icons: 
            top_left_icon: "3"
            bottom_right_icon: "3"
        arena_frame: "<SpriteAddress>"
        owning_player: Opponent
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Weapon 3 Attack 12 Boost 3 Cost"
            rules_text: "<RulesText>"
            targeting: 
                can_play: false
            on_release_position: 
                sorting_key: 101
                position: ObjectPositionItem { item_location: Left }
